# agent-tool-harness

./: .env.example  .gitignore  CHANGELOG.md  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.md  RELEASE_NOTES_v0.2.md  RELEASE_NOTES_v0.3.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v1.1.md  RELEASE_NOTES_v1.2.md  RELEASE_NOTES_v1.4.md  RELEASE_NOTES_v1.5.md  RELEASE_NOTES_v1.6.md  RELEASE_NOTES_v1.7.md  RELEASE_NOTES_v2.0.md  pyproject.toml
agent_tool_harness/: __init__.py  agent2harness_adapter.py  anthropic_transport.py  artifact_schema.py  assembly.py  cli.py  cli_agent.py  core_contract.py  core_evaluation.py  core_report_bridge.py  demo_core_bridge.py  fake_judge.py  judge_provider_factory.py  llm_config.py  llm_judge.py  openai_transport.py  secrets.py  signal_quality.py  tool_ergonomics.py  tool_inspection.py  tool_response_quality.py  tool_spec_inspection.py  tool_use_quality_judge.py  tool_use_quality_rubric.py  trace_diagnostics.py  trace_import.py
docs/: AGENT2HARNESS_CORE_SPEC.md  AGENT2HARNESS_MAIN_FLOW.md  ANTHROPIC_LINEAGE.md  ARCHITECTURE.md  ARTIFACTS.md  BACKLOG.md  CLI_AGENT_ADAPTER_SPEC.md  CLI_USAGE.md  CONFIGURATION.md  CURRENT_IMPLEMENTATION.md  DEMO_CORE_REAL_BOUNDARY.md  DEMO_TO_CORE_MIGRATION.md  DEVELOPER_GUIDE.md  DOGFOODING.md  DOGFOOD_REAL_LLM_001.md  EXTERNAL_RUNNER_WORKFLOW.md  FEEDBACK_TRIAGE_WORKFLOW.md  FIRST_INTERNAL_TRIAL_HANDOFF.md  FIRST_INTERNAL_TRIAL_INVITE_TEMPLATE.md  FIRST_REAL_TRIAL_EXECUTION_PLAN.md  HEADLESS_HARNESS_MODEL.md  INDEX.md  INTERNAL_TEAM_SELF_SERVE_TRIAL.md  INTERNAL_TRIAL.md  LLM_PROVIDER_CONFIG.md  (+27 more)
(+307 files in other folders)
